Fixed chat alignment

--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -481,11 +481,13 @@ th {
 }
 .chat-conversation-container {
     width: 20vmax;
+    height: 100%;
+    max-height: 60vh;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
     overflow-y:auto; /*Scrollable*/
-    height: 60vh;
 }
 .chat-viewport-container {
-    width: 60vmax;
     height: 60vh;
     margin: 0px;
     background-color: #f2f2f2;
@@ -493,6 +495,7 @@ th {
 .message-container {
     height: 90%;
     background-color: #f2f2f2;
+    top: 0px;
     padding-top: auto;
     padding-bottom: auto;
     overflow-y:auto; /*Scrollable*/
